force-app/main/default/objects/Order_Installment__c/Order_Installment__c.object-meta.xml
<CustomObject>
    <label>Order Installment</label>
    <nameField>
        <displayFormat>OIN-{0000000}</displayFormat>
        <label>Order Installment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Installments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>