force-app/main/default/objects/Order_Installment__c/fields/External_Remarks__c.field-meta.xml
<CustomField>
    <fullName>External_Remarks__c</fullName>
    <label>External Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>