force-app/main/default/objects/Order_Installment__c/fields/Parent_ID_Config__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID_Config__c</fullName>
    <formula>CASESAFEID(Order__c)</formula>
    <label>Parent ID Config</label>
    <type>Text</type>
</CustomField>