force-app/main/default/objects/Order_Installment__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <inlineHelpText>This field will be updated by account team from external system.</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>Payment Not Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>