force-app/main/default/objects/Order_Installment__c/fields/Transaction_Proof_Link__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Proof_Link__c</fullName>
    <label>Transaction Proof Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>